Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1439,7 +1439,7 @@
   "pli-tv-kd13:30.1.1": "“It may be that a monk commits a number of unconcealed offenses entailing suspension and then becomes a novice monk … ",
   "pli-tv-kd13:30.1.2": "goes insane … ",
   "pli-tv-kd13:30.1.3": "becomes deranged … ",
-  "pli-tv-kd13:30.1.4": "(To be expanded as above.) ",
+  "pli-tv-kd13:30.1.4": "(to be expanded as above) … ",
   "pli-tv-kd13:30.1.5": "is overwhelmed by pain … ",
   "pli-tv-kd13:30.1.6": "both concealed and unconcealed … ",
   "pli-tv-kd13:30.1.7": "he knows about some of the offenses, but not others … ",
