--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1442,8 +1442,8 @@
   "pli-tv-kd13:30.1.4": "(to be expanded as above) … ",
   "pli-tv-kd13:30.1.5": "is overwhelmed by pain … ",
   "pli-tv-kd13:30.1.6": "both concealed and unconcealed … ",
-  "pli-tv-kd13:30.1.7": "he knows about some of the offenses, but not others … ",
-  "pli-tv-kd13:30.1.8": "he remembers some of the offenses, but not others … ",
+  "pli-tv-kd13:30.1.7": "he’s aware of some of them, but not others … ",
+  "pli-tv-kd13:30.1.8": "he remembers some of them, but not others … ",
   "pli-tv-kd13:30.1.9": "he’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:30.1.10": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:30.1.11": "but not those he’s unsure of. ",
