Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1444,11 +1444,11 @@
   "pli-tv-kd13:30.1.6": "both concealed and unconcealed … ",
   "pli-tv-kd13:30.1.7": "he’s aware of some of them, but not others … ",
   "pli-tv-kd13:30.1.8": "he remembers some of them, but not others … ",
-  "pli-tv-kd13:30.1.9": "he’s sure of some of the offenses, but unsure of others. ",
+  "pli-tv-kd13:30.1.9": "he’s sure of some of them, but unsure of others. ",
   "pli-tv-kd13:30.1.10": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:30.1.11": "but not those he’s unsure of. ",
   "pli-tv-kd13:30.1.12": "He then becomes overwhelmed by pain. ",
-  "pli-tv-kd13:30.1.13": "When he recovers and having become sure of all the offenses, he conceals none of them. … ",
+  "pli-tv-kd13:30.1.13": "Having recovered and having become sure of all of them, he conceals none of them. … ",
   "pli-tv-kd13:30.1.15": "having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
   "pli-tv-kd13:30.1.16": "but he conceals those he was unsure of. … ",
   "pli-tv-kd13:30.1.17": "having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
