Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1449,7 +1449,7 @@
   "pli-tv-kd13:30.1.11": "but not those he’s unsure of. ",
   "pli-tv-kd13:30.1.12": "He then becomes overwhelmed by pain. ",
   "pli-tv-kd13:30.1.13": "Having recovered and having become sure of all of them, he conceals none of them. … ",
-  "pli-tv-kd13:30.1.15": "having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
+  "pli-tv-kd13:30.1.15": "having become sure of all of them, he doesn’t conceal those offenses he previously was sure of, ",
   "pli-tv-kd13:30.1.16": "but he conceals those he was unsure of. … ",
   "pli-tv-kd13:30.1.17": "having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
   "pli-tv-kd13:30.1.18": "but not those he was unsure of. … ",
