--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1451,15 +1451,15 @@
   "pli-tv-kd13:30.1.13": "Having recovered and having become sure of all of them, he conceals none of them. … ",
   "pli-tv-kd13:30.1.15": "having become sure of all of them, he doesn’t conceal those offenses he previously was sure of, ",
   "pli-tv-kd13:30.1.16": "but he conceals those he was unsure of. … ",
-  "pli-tv-kd13:30.1.17": "having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
+  "pli-tv-kd13:30.1.17": "having become sure of all of them, he conceals those offenses he previously was sure of, ",
   "pli-tv-kd13:30.1.18": "but not those he was unsure of. … ",
-  "pli-tv-kd13:30.1.19": "having become sure of all the offenses, he conceals all of them. ",
-  "pli-tv-kd13:30.1.21": "That monk should be given probation according to the length of the earlier and subsequent concealment of that class of offenses, and he should then be given the trial period of six days.” ",
-  "pli-tv-kd13:30.1.22": "The group of one hundred on the trial period of six days is finished. ",
+  "pli-tv-kd13:30.1.19": "having become sure of all of them, he conceals all of them. ",
+  "pli-tv-kd13:30.1.21": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days.” ",
+  "pli-tv-kd13:30.1.22": "The group of one hundred on the trial period is finished. ",
   "pli-tv-kd13:31.1.0": "6. The group of four hundred on simultaneous probation with sending back to the beginning ",
   "pli-tv-kd13:31.1.1": "“It may be that a monk on probation commits a number of unconcealed offenses entailing suspension, and then disrobes. ",
   "pli-tv-kd13:31.1.2": "Being re-ordained, he doesn’t conceal those offenses. ",
-  "pli-tv-kd13:31.1.3": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:31.1.3": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.4": "It may be that a monk on probation commits a number of unconcealed offenses entailing suspension, and then disrobes. ",
   "pli-tv-kd13:31.1.5": "Being re-ordained, he conceals those offenses. ",
   "pli-tv-kd13:31.1.6": "That monk is to be sent back to the beginning. ",
