Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1462,15 +1462,15 @@
   "pli-tv-kd13:31.1.3": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.4": "It may be that a monk on probation commits a number of unconcealed offenses entailing suspension, and then disrobes. ",
   "pli-tv-kd13:31.1.5": "Being re-ordained, he conceals those offenses. ",
-  "pli-tv-kd13:31.1.6": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:31.1.6": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.7": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.1.8": "It may be that a monk on probation commits a number of concealed offenses entailing suspension, and then disrobes. ",
   "pli-tv-kd13:31.1.9": "Being re-ordained, he doesn’t conceal those offenses. ",
-  "pli-tv-kd13:31.1.10": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:31.1.10": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.11": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.1.12": "It may be that a monk on probation commits a number of concealed offenses entailing suspension, and then disrobes. ",
   "pli-tv-kd13:31.1.13": "Being re-ordained, he conceals those offenses. ",
-  "pli-tv-kd13:31.1.14": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:31.1.14": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.15": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.2.1": "“It may be that a monk on probation commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:31.2.2": "both concealed and unconcealed, ",
