Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1487,7 +1487,7 @@
   "pli-tv-kd13:31.2.14": "both concealed and unconcealed, ",
   "pli-tv-kd13:31.2.15": "and then disrobes. Being re-ordained, he conceals those offenses he previously concealed, ",
   "pli-tv-kd13:31.2.16": "but he doesn’t conceal those he previously didn’t conceal. ",
-  "pli-tv-kd13:31.2.17": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:31.2.17": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.2.18": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.2.19": "It may be that a monk on probation commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:31.2.20": "both concealed and unconcealed, ",
