--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1566,7 +1566,7 @@
   "pli-tv-kd13:31.3.75": "but not those he’s unsure of. ",
   "pli-tv-kd13:31.3.76": "He then disrobes. Being re-ordained and having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
   "pli-tv-kd13:31.3.77": "but he conceals those he was unsure of. ",
-  "pli-tv-kd13:31.3.78": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:31.3.78": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.79": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.80": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.81": "He’s sure of some of the offenses, but unsure of others. ",
