--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1601,7 +1601,7 @@
   "pli-tv-kd13:31.3.112": "having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
   "pli-tv-kd13:31.3.113": "but not those he was unsure of. … ",
   "pli-tv-kd13:31.3.114": "having become sure of all the offenses, he conceals all of them. ",
-  "pli-tv-kd13:31.3.116": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:31.3.116": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.117": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:32.1.1": "“It may be that a monk who deserves the trial period of six days … ",
   "pli-tv-kd13:32.1.2": "who is undertaking the trial period of six days … ",
