Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1624,7 +1624,7 @@
   "pli-tv-kd13:32.1.20": "having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
   "pli-tv-kd13:32.1.21": "but not those he was unsure of. … ",
   "pli-tv-kd13:32.1.22": "having become sure of all the offenses, he conceals all of them. ",
-  "pli-tv-kd13:32.1.24": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:32.1.24": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:32.1.25": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses.” ",
   "pli-tv-kd13:32.1.26": "The group of four hundred on simultaneous probation with being sent back to the beginning is finished. ",
   "pli-tv-kd13:33.1.0": "7. The group of eight sections on “specified”, etc. ",
