--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1712,7 +1712,7 @@
   "pli-tv-kd13:35.1.5": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.1.6": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
   "pli-tv-kd13:35.1.7": "It then gives him the trial period of six days illegitimately, and the rehabilitation illegitimately. ",
-  "pli-tv-kd13:35.1.8": "That monk isn’t purified from those offenses. ",
+  "pli-tv-kd13:35.1.8": "He’s not purified from those offenses. ",
   "pli-tv-kd13:35.1.9": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
   "pli-tv-kd13:35.1.10": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.1.11": "which he gets. ",
@@ -1720,7 +1720,7 @@
   "pli-tv-kd13:35.1.13": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.1.14": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
   "pli-tv-kd13:35.1.15": "It then gives him the trial period of six days illegitimately, and the rehabilitation illegitimately. ",
-  "pli-tv-kd13:35.1.16": "That monk isn’t purified from those offenses. ",
+  "pli-tv-kd13:35.1.16": "He’s not purified from those offenses. ",
   "pli-tv-kd13:35.1.17": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
   "pli-tv-kd13:35.1.18": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.1.19": "which he gets. ",
