Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1746,7 +1746,7 @@
   "pli-tv-kd13:35.2.16": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.2.17": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
   "pli-tv-kd13:35.2.18": "It then gives him the trial period of six days illegitimately, and the rehabilitation illegitimately. ",
-  "pli-tv-kd13:35.2.19": "That monk isn’t purified from those offenses. ",
+  "pli-tv-kd13:35.2.19": "He’s not purified from those offenses. ",
   "pli-tv-kd13:35.2.20": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
   "pli-tv-kd13:35.2.21": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.2.22": "which he gets. ",
@@ -1756,7 +1756,7 @@
   "pli-tv-kd13:35.2.26": "And the Sangha gives him simultaneous probation legitimately. ",
   "pli-tv-kd13:35.2.27": "It then gives him the trial period of six days illegitimately, ",
   "pli-tv-kd13:35.2.28": "and the rehabilitation illegitimately. ",
-  "pli-tv-kd13:35.2.29": "That monk isn’t purified from those offenses.” ",
+  "pli-tv-kd13:35.2.29": "He’s not purified from those offenses.” ",
   "pli-tv-kd13:35.2.30": "The group of nine on unpurified with sending back to the beginning is finished. ",
   "pli-tv-kd13:36.1.0": "10. The second group of nine ",
   "pli-tv-kd13:36.1.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
@@ -1766,7 +1766,7 @@
   "pli-tv-kd13:36.1.5": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.1.6": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
   "pli-tv-kd13:36.1.7": "It then gives him the trial period of six days legitimately, and the rehabilitation legitimately. ",
-  "pli-tv-kd13:36.1.8": "That monk isn’t purified from those offenses. ",
+  "pli-tv-kd13:36.1.8": "He’s not purified from those offenses. ",
   "pli-tv-kd13:36.1.9": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.1.10": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.11": "He asks the Sangha for simultaneous probation for those offenses, ",
