--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1795,7 +1795,7 @@
   "pli-tv-kd13:36.1.34": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.1.35": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
   "pli-tv-kd13:36.1.36": "It then gives him the trial period of six days legitimately, and the rehabilitation legitimately. ",
-  "pli-tv-kd13:36.1.37": "That monk isn’t purified from those offenses. ",
+  "pli-tv-kd13:36.1.37": "He’s not purified from those offenses. ",
   "pli-tv-kd13:36.1.38": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.1.39": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.40": "He asks the Sangha for simultaneous probation for those offenses, ",
@@ -1803,7 +1803,7 @@
   "pli-tv-kd13:36.1.42": "While on probation, he commits a number of offenses entailing suspension—concealed and both specified and unspecified. ",
   "pli-tv-kd13:36.1.43": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.1.44": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. It then gives him the trial period of six days legitimately, and the rehabilitation legitimately. ",
-  "pli-tv-kd13:36.1.45": "That monk isn’t purified from those offenses. ",
+  "pli-tv-kd13:36.1.45": "He’s not purified from those offenses. ",
   "pli-tv-kd13:36.1.46": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.1.47": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.48": "He asks the Sangha for simultaneous probation for those offenses, ",
