--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1812,7 +1812,7 @@
   "pli-tv-kd13:36.1.51": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.1.52": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
   "pli-tv-kd13:36.1.53": "It then gives him the trial period of six days legitimately, and the rehabilitation legitimately. ",
-  "pli-tv-kd13:36.1.54": "That monk isn’t purified from those offenses.” ",
+  "pli-tv-kd13:36.1.54": "He’s not purified from those offenses.” ",
   "pli-tv-kd13:36.1.55": "The second group of nine is finished. ",
   "pli-tv-kd13:36.2.0": "11. The third group of nine ",
   "pli-tv-kd13:36.2.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
