Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1844,7 +1844,7 @@
   "pli-tv-kd13:36.2.46": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses committed while on probation. And the procedure should be legitimate, irreversible, and fit to stand; the simultaneous probation should be legitimate; the trial period of six days should be legitimate; and the rehabilitation should be legitimate.’ ",
   "pli-tv-kd13:36.2.47": "He asks to be sent back to the beginning like this, ",
   "pli-tv-kd13:36.2.48": "and the Sangha sends him back to the beginning for those offenses committed while on probation. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. It also gives him the trial period of six days legitimately, and it rehabilitates him legitimately. ",
-  "pli-tv-kd13:36.2.49": "That monk is purified from those offenses. ",
+  "pli-tv-kd13:36.2.49": "He’s purified from those offenses. ",
   "pli-tv-kd13:36.2.50": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.2.51": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.2.52": "He asks the Sangha for simultaneous probation for those offenses, ",
