Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1899,7 +1899,7 @@
   "pli-tv-kd13:36.4.43": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses committed while on probation. And the procedure should be legitimate, irreversible, and fit to stand; the simultaneous probation should be legitimate; the trial period of six days should be legitimate; and the rehabilitation should be legitimate.’ ",
   "pli-tv-kd13:36.4.44": "He asks to be sent back to the beginning like this, ",
   "pli-tv-kd13:36.4.45": "and the Sangha sends him back to the beginning for those offenses committed while on probation. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. It also gives him the trial period of six days legitimately, and it rehabilitates him legitimately. ",
-  "pli-tv-kd13:36.4.46": "That monk is purified from those offenses.” ",
+  "pli-tv-kd13:36.4.46": "He’s purified from those offenses.” ",
   "pli-tv-kd13:36.4.47": "The third group of nine is finished. ",
   "pli-tv-kd13:36.4.48": "The third chapter containing the collection of processes for the clearing of offenses entailing suspension is finished. ",
   "pli-tv-kd13:36.4.65": "The teachers of analytical statements, ",
