Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -875,6 +875,7 @@
   "sn-name:1508.sn46": "Verbundene Lehrreden über die Faktoren des Erwachens ",
   "sn-name:1509.sn46-pabbatavagga": "Das Kapitel über Berge ",
   "sn-name:1510.sn46.1": "Der Himalaya ",
+  "sn-name:1512.sn46.3": "Sittlichkeit ",
   "sn-name:1520.sn46-gilanavagga": "Das Kapitel über Kranke ",
   "sn-name:1531.sn46-udayivagga": "Das Kapitel mit Udāyī ",
   "sn-name:1541.sn46.30": "Mit Udāyī ",
