Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn46.3:0.1": "Verbundene Lehrreden 46.3 ",
-  "sn46.3:0.2": "1. Das Kapitel über Berge "
+  "sn46.3:0.2": "1. Das Kapitel über Berge ",
+  "sn46.3:0.3": "Sittlichkeit "
 }
