Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn46.3:0.1": "Verbundene Lehrreden 46.3 ",
   "sn46.3:0.2": "1. Das Kapitel über Berge ",
   "sn46.3:0.3": "Sittlichkeit ",
-  "sn46.3:1.1": "„Mönche und Nonnen, wenn ein Mönch in Sittlichkeit, Versenkung, Erkenntnis, Freiheit und Erkennen und Sehen der Freiheit vervollkommnet ist, ist der bloße Anblick dieses Mönchs eine große Hilfe, sage ich. "
+  "sn46.3:1.1": "„Mönche und Nonnen, wenn ein Mönch in Sittlichkeit, Versenkung, Erkenntnis, Freiheit und Erkennen und Sehen der Freiheit vervollkommnet ist, ist der bloße Anblick dieses Mönchs eine große Hilfe, sage ich. ",
+  "sn46.3:1.2": "Auch ihn zu hören, "
 }
