--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn46.3:0.3": "Sittlichkeit ",
   "sn46.3:1.1": "„Mönche und Nonnen, wenn ein Mönch in Sittlichkeit, Versenkung, Erkenntnis, Freiheit und Erkennen und Sehen der Freiheit vervollkommnet ist, ist der bloße Anblick dieses Mönchs eine große Hilfe, sage ich. ",
   "sn46.3:1.2": "Auch ihn zu hören, ",
-  "sn46.3:1.3": "sich zu ihm zu begeben, "
+  "sn46.3:1.3": "sich zu ihm zu begeben, ",
+  "sn46.3:1.4": "ihm seine Aufwartung zu machen, "
 }
