--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn46.3:1.3": "sich zu ihm zu begeben, ",
   "sn46.3:1.4": "ihm seine Aufwartung zu machen, ",
   "sn46.3:1.5": "sich auf ihn zu besinnen ",
-  "sn46.3:1.6": "oder fortzuziehen und ihm zu folgen ist eine große Hilfe, sage ich. "
+  "sn46.3:1.6": "oder fortzuziehen und ihm zu folgen ist eine große Hilfe, sage ich. ",
+  "sn46.3:1.7": "Und warum? "
 }
