--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn46.3:1.5": "sich auf ihn zu besinnen ",
   "sn46.3:1.6": "oder fortzuziehen und ihm zu folgen ist eine große Hilfe, sage ich. ",
   "sn46.3:1.7": "Und warum? ",
-  "sn46.3:1.8": "Weil ein Mönch, nachdem er die Lehre solcher Mönche gehört hat, sowohl mit dem Körper als auch mit dem Geist zurückgezogen leben wird, "
+  "sn46.3:1.8": "Weil ein Mönch, nachdem er die Lehre solcher Mönche gehört hat, sowohl mit dem Körper als auch mit dem Geist zurückgezogen leben wird, ",
+  "sn46.3:1.9": "während er sich an diese Lehre erinnert und darüber nachdenkt. "
 }
