--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn46.3:1.7": "Und warum? ",
   "sn46.3:1.8": "Weil ein Mönch, nachdem er die Lehre solcher Mönche gehört hat, sowohl mit dem Körper als auch mit dem Geist zurückgezogen leben wird, ",
   "sn46.3:1.9": "während er sich an diese Lehre erinnert und darüber nachdenkt. ",
-  "sn46.3:2.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Achtsamkeit in Gang gesetzt; "
+  "sn46.3:2.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Achtsamkeit in Gang gesetzt; ",
+  "sn46.3:2.2": "er entwickelt ihn "
 }
