--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn46.3:1.9": "während er sich an diese Lehre erinnert und darüber nachdenkt. ",
   "sn46.3:2.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Achtsamkeit in Gang gesetzt; ",
   "sn46.3:2.2": "er entwickelt ihn ",
-  "sn46.3:2.3": "und vervollkommnet ihn. "
+  "sn46.3:2.3": "und vervollkommnet ihn. ",
+  "sn46.3:2.4": "Wenn er auf diese Art achtsam lebt, untersucht, erkundet und prüft er diese Lehre mit Weisheit. "
 }
