Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn46.3:3.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Erforschung der Gesetzmäßigkeiten in Gang gesetzt; ",
   "sn46.3:3.2": "er entwickelt ihn ",
   "sn46.3:3.3": "und vervollkommnet ihn. ",
-  "sn46.3:3.4": "Wenn er auf diese Art die Gesetzmäßigkeiten mit Weisheit erforscht, wird seine Energie aufgerüttelt und unermüdlich. "
+  "sn46.3:3.4": "Wenn er auf diese Art die Gesetzmäßigkeiten mit Weisheit erforscht, wird seine Energie aufgerüttelt und unermüdlich. ",
+  "sn46.3:4.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Energie in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. "
 }
