--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn46.3:3.4": "Wenn er auf diese Art die Gesetzmäßigkeiten mit Weisheit erforscht, wird seine Energie aufgerüttelt und unermüdlich. ",
   "sn46.3:4.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Energie in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
   "sn46.3:4.2": "Wenn er energisch ist, kommt spirituelle Ekstase auf. ",
-  "sn46.3:5.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Ekstase in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. "
+  "sn46.3:5.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Ekstase in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
+  "sn46.3:5.2": "Wenn der Geist in Ekstase ist, werden Körper und Geist still. "
 }
