--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn46.3:4.2": "Wenn er energisch ist, kommt spirituelle Ekstase auf. ",
   "sn46.3:5.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Ekstase in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
   "sn46.3:5.2": "Wenn der Geist in Ekstase ist, werden Körper und Geist still. ",
-  "sn46.3:6.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Stille in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. "
+  "sn46.3:6.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Stille in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
+  "sn46.3:6.2": "Wenn der Körper still ist und man voller Seligkeit ist, versenkt sich der Geist im Samādhi. "
 }
