Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn46.3:5.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Ekstase in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
   "sn46.3:5.2": "Wenn der Geist in Ekstase ist, werden Körper und Geist still. ",
   "sn46.3:6.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Stille in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
-  "sn46.3:6.2": "Wenn der Körper still ist und man voller Seligkeit ist, versenkt sich der Geist im Samādhi. "
+  "sn46.3:6.2": "Wenn der Körper still ist und man voller Seligkeit ist, versenkt sich der Geist im Samādhi. ",
+  "sn46.3:7.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Versenkung in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. "
 }
