--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn46.3:6.2": "Wenn der Körper still ist und man voller Seligkeit ist, versenkt sich der Geist im Samādhi. ",
   "sn46.3:7.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Versenkung in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
   "sn46.3:7.2": "Über diesen versunkenen Geist wacht er sorgfältig. ",
-  "sn46.3:8.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Gleichmut in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. "
+  "sn46.3:8.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Gleichmut in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
+  "sn46.3:9.1": "Wenn die sieben Faktoren des Erwachens auf diese Art entwickelt und gepflegt werden, kann man siebenfache Frucht und siebenfachen Segen erwarten. "
 }
