--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -30,5 +30,5 @@
   "sn46.3:8.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Gleichmut in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
   "sn46.3:9.1": "Wenn die sieben Faktoren des Erwachens auf diese Art entwickelt und gepflegt werden, kann man siebenfache Frucht und siebenfachen Segen erwarten. ",
   "sn46.3:9.2": "Welche sieben? ",
-  "sn46.3:9.3": "Man kann beizeiten in diesem Leben Erleuchtung erlangen. "
+  "sn46.3:9.3": "Man erlangt beizeiten in diesem Leben Erleuchtung. "
 }
