--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -34,5 +34,5 @@
   "sn46.3:9.4": "Wenn nicht, erlangt man Erleuchtung zur zeit des Todes. ",
   "sn46.3:9.5": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln zwischen zwei Leben. ",
   "sn46.3:9.6": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln beim Auftreffen. ",
-  "sn46.3:9.7": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln ohne besondere Anstrengung. "
+  "sn46.3:9.7": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln ohne zusätzliche Anstrengung. "
 }
