--- a/translation/de/sabbamitta/sutta/an/an7/an7.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.16_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "an7.16:3.1": "Dann meditiert da eine Person, indem sie die Unbeständigkeit bei allen Bedingungen beobachtet, wahrnimmt und erfährt. … ",
   "an7.16:3.2": "Mit dem Auflösen der fünf niederen Fesseln erlischt sie zwischen zwei Leben. … ",
   "an7.16:3.3": "Mit dem Auflösen der fünf niederen Fesseln erlischt sie beim Auftreffen. … ",
-  "an7.16:3.4": "Mit dem Auflösen der fünf niederen Fesseln erlischt sie ohne besondere Anstrengung. … ",
+  "an7.16:3.4": "Mit dem Auflösen der fünf niederen Fesseln erlischt sie ohne zusätzliche Anstrengung. … ",
   "an7.16:3.5": "Mit dem Auflösen der fünf niederen Fesseln erlischt sie mit besonderer Anstrengung. … ",
   "an7.16:3.6": "Mit dem Auflösen der fünf niederen Fesseln geht sie stromaufwärts zum Akaniṭṭha-Bereich. ",
   "an7.16:3.7": "Das ist der siebte Mensch. ",
