--- a/translation/de/sabbamitta/sutta/an/an3/an3.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.88_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "an3.88:2.6": "Sie erlangt mit der Auflösung der Befleckungen in diesem Leben die fleckenlose Freiheit des Herzens, die fleckenlose Freiheit durch Weisheit, erkennt sie durch eigene Einsicht und lebt darin. ",
   "an3.88:2.7": "Wenn sie nicht so weit vordringt, erlischt sie mit dem Auflösen der fünf niederen Fesseln zwischen zwei Leben. ",
   "an3.88:2.8": "Wenn sie nicht so weit vordringt, erlischt sie mit dem Auflösen der fünf niederen Fesseln beim Auftreffen. ",
-  "an3.88:2.9": "Wenn sie nicht so weit vordringt, erlischt sie mit dem Auflösen der fünf niederen Fesseln ohne besondere Anstrengung. ",
+  "an3.88:2.9": "Wenn sie nicht so weit vordringt, erlischt sie mit dem Auflösen der fünf niederen Fesseln ohne zusätzliche Anstrengung. ",
   "an3.88:2.10": "Wenn sie nicht so weit vordringt, erlischt sie mit dem Auflösen der fünf niederen Fesseln mit besonderer Anstrengung. ",
   "an3.88:2.11": "Wenn sie nicht so weit vordringt, geht sie mit dem Auflösen der fünf niederen Fesseln stromaufwärts zum Akaniṭṭha-Bereich. ",
   "an3.88:2.12": "Wenn sie nicht so weit vordringt, ist sie mit dem Auflösen von drei Fesseln und dem Abschwächen von Gier, Hass und Täuschung eine Einmalwiederkehrerin. Nur einmal kehrt sie in diese Welt zurück, um dann dem Leiden ein Ende zu machen. ",
