--- a/translation/de/sabbamitta/sutta/an/an9/an9.12_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.12_translation-de-sabbamitta.json
@@ -25,7 +25,7 @@
   "an9.12:6.2": "Mit dem Auflösen der fünf niederen Fesseln erlischt er beim Auftreffen. Das ist der zweite Mensch … ",
   "an9.12:6.3": "Mit dem Auflösen der fünf niederen Fesseln erlischt er ohne zusätzliche Anstrengung. ",
   "an9.12:6.4": "Das ist der dritte Mensch … ",
-  "an9.12:6.5": "Mit dem Auflösen der fünf niederen Fesseln erlischt er mit besonderer Anstrengung. ",
+  "an9.12:6.5": "Mit dem Auflösen der fünf niederen Fesseln erlischt er mit zusätzlicher Anstrengung. ",
   "an9.12:6.6": "Das ist der vierte Mensch … ",
   "an9.12:6.7": "Mit dem Auflösen der fünf niederen Fesseln geht er stromaufwärts zum Akaniṭṭha-Bereich. ",
   "an9.12:6.8": "Das ist der fünfte Mensch … ",
