--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn46.3:9.5": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln zwischen zwei Leben. ",
   "sn46.3:9.6": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln beim Auftreffen. ",
   "sn46.3:9.7": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln ohne zusätzliche Anstrengung. ",
-  "sn46.3:9.8": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln mit zusätzlicher Anstrengung. "
+  "sn46.3:9.8": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln mit zusätzlicher Anstrengung. ",
+  "sn46.3:9.9": "Wenn nicht, geht man mit dem Auflösen der fünf niederen Fesseln stromaufwärts zum Akaniṭṭha-Bereich. "
 }
