Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -112,5 +112,5 @@
   "mn4:20.5": "તો બ્રાહ્મણ, થોડા વખત પછી અમુક ખાસ કરીને શુકનવાળી રાતો—",
   "mn4:20.6": "જેમ કે પક્ષની અમાસ, પૂનમ, અને અષ્ટમી—",
   "mn4:20.7": "એવી રાતે મેં અહીં તહીં બાગમાં કે વનમાં કે ઝાડ પાસેના ભયાનક અને રોમાંચકારક મંદિરોમાં આશ્રય લીધો.",
-  "mn4:20.8": "ત્યાં "
+  "mn4:20.8": "બ્રાહ્મણ, ત્યાં જ્યારે હું આ રીતે રહ્યો, ત્યારે જો હરણ આવ્યું, મોર "
 }
