--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -115,5 +115,6 @@
   "mn4:20.8": "બ્રાહ્મણ, ત્યાં જ્યારે હું આ રીતે રહ્યો, ત્યારે જો કોઇ હરણ આવે, મોર દાંડીઓ કચડાવતું હોય, અથવા પવનથી પાંદડા ખડખડાતા હોય;",
   "mn4:20.9": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:20.10": "‘નક્કી આ એ જ ડર અને બીક આવી લાગે છે’.",
-  "mn4:20.11": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
+  "mn4:20.11": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
+  "mn4:20.12": "‘હું શેના માટે હંમેશા ભયની અપેક્ષા રાખીને રહું છું?"
 }
