Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1260,7 +1260,7 @@
   "pli-tv-kd13:27.3.14": "If he’s re-admitted, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.3.15": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.3.16": "And he’s to be given the trial period. ",
-  "pli-tv-kd13:27.4.1": "“It may be that a monk undertaking the trial period of six days disrobes. ",
+  "pli-tv-kd13:27.4.1": "“It may be that a monk undertaking the trial period disrobes. ",
   "pli-tv-kd13:27.4.2": "For one who’s disrobed, the trial period is suspended. ",
   "pli-tv-kd13:27.4.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.4.4": "The probation that was given is valid. The probation he’s undertaken is valid. ",
