Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1343,7 +1343,7 @@
   "pli-tv-kd13:29.2.1": "“It may be that a monk commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:29.2.2": "both concealed and unconcealed, ",
   "pli-tv-kd13:29.2.3": "and then disrobes. Being re-ordained, he doesn’t conceal any of them. ",
-  "pli-tv-kd13:29.2.5": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.2.5": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.2.6": "It may be that a monk commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:29.2.7": "both concealed and unconcealed, ",
   "pli-tv-kd13:29.2.8": "and then disrobes. Being re-ordained, he doesn’t conceal those offenses he previously concealed, ",
