Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1363,7 +1363,7 @@
   "pli-tv-kd13:29.3.3": "He conceals the offenses he’s aware of, ",
   "pli-tv-kd13:29.3.4": "but not those he’s not aware of. ",
   "pli-tv-kd13:29.3.5": "He then disrobes. Being re-ordained and having found out about all of them, he conceals none of them. ",
-  "pli-tv-kd13:29.3.7": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.3.7": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.3.8": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.3.9": "He’s aware of some of them, but not others. ",
   "pli-tv-kd13:29.3.10": "He conceals the offenses he’s aware of, ",
