Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1368,9 +1368,9 @@
   "pli-tv-kd13:29.3.9": "He’s aware of some of them, but not others. ",
   "pli-tv-kd13:29.3.10": "He conceals the offenses he’s aware of, ",
   "pli-tv-kd13:29.3.11": "but not those he’s not aware of. ",
-  "pli-tv-kd13:29.3.12": "He then disrobes. Being re-ordained and having found out about all of them, he doesn’t conceal those offenses he previously was aware of, ",
-  "pli-tv-kd13:29.3.13": "but he conceals those he wasn’t aware of. ",
-  "pli-tv-kd13:29.3.14": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.3.12": "He then disrobes. Being re-ordained and having found out about all of them, he doesn’t conceal those offenses he was previously aware of, ",
+  "pli-tv-kd13:29.3.13": "but conceals those he wasn’t aware of. ",
+  "pli-tv-kd13:29.3.14": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.3.15": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.3.16": "He’s aware of some of them, but not others. ",
   "pli-tv-kd13:29.3.17": "He conceals the offenses he’s aware of, ",
