Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1396,7 +1396,7 @@
   "pli-tv-kd13:29.4.11": "but not those he doesn’t remember. ",
   "pli-tv-kd13:29.4.12": "He then disrobes. Being re-ordained and having remembered all of them, he doesn’t conceal those offenses he previously remembered, ",
   "pli-tv-kd13:29.4.13": "but conceals those he didn’t remember. ",
-  "pli-tv-kd13:29.4.14": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.4.14": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.4.15": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.4.16": "He remembers some of them, but not others. ",
   "pli-tv-kd13:29.4.17": "He conceals the offenses he remembers, ",
